# simple_camera_test

./: config.py  gige_camera_qobject.py  led_controller_3.py  main_window.py  microscope_controller.py  microscope_controller.ui  pyproject.toml  pyspin_camera_qobject.py  uvc_camera_qobject.py
